--- a/1115.html
+++ b/1115.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>1115</title>
+<title>1129</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -45,7 +45,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">1115</h1>
+<h1 class="title">1129</h1>
 </div>
 
 
@@ -60,7 +60,50 @@ ul.task-list li input[type="checkbox"] {
 
 </header>
 
-
+<section id="lesson-5-navigating-conflict" class="level2">
+<h2 class="anchored" data-anchor-id="lesson-5-navigating-conflict">Lesson 5 : Navigating Conflict</h2>
+<section id="elephant" class="level3">
+<h3 class="anchored" data-anchor-id="elephant">100% Elephant</h3>
+<ul>
+<li>코끼리(감정)이 날뛰는 패닉존에 있을 땐, 코끼리를 스트레치존으로 데려가야 한다.</li>
+</ul>
+</section>
+<section id="detect---pause---redirect" class="level3">
+<h3 class="anchored" data-anchor-id="detect---pause---redirect">Detect - Pause - Redirect</h3>
+<p><img src="images/image-2101950546.png" class="img-fluid" width="337"></p>
+<ul>
+<li><p>패닉 상태임을 인지해라.</p></li>
+<li><p>일단 잠깐 멈춰라!</p></li>
+<li><p>패닉존에서 벗어날 길을 찾아보자.</p></li>
+</ul>
+</section>
+<section id="detect" class="level3">
+<h3 class="anchored" data-anchor-id="detect">1. Detect</h3>
+<ul>
+<li><p>Physical Sign: 얼굴 후끈, 덥거나 춥고, 손발이 차가워진다면?</p></li>
+<li><p>Thoughts: 난 바보야 … 난 끝났어 … 생각이 든다면?</p></li>
+<li><p>Emotions: 불안, 좌절, 죄책감이 든다면?</p></li>
+<li><p>Behaviors: Fight(공격, 비난), Flight(회피), Freeze(조용히) 한다면?</p></li>
+</ul>
+</section>
+<section id="pause" class="level3">
+<h3 class="anchored" data-anchor-id="pause">2. Pause</h3>
+<ul>
+<li><p>일단 잠깐 멈추고, 심호흡 !!!!!! (1, 2, 3)</p></li>
+<li><p>너의 감각을 사용해서 현재의 상황을 둘러봐.</p></li>
+<li><p>주변에 대한 판단 대신, 너의 현 상황에 집중해봐.</p></li>
+<li><p>너 스스로와 긍정적인 대화를 해봐. 넌 할 수 있어, 잘했어 등.</p></li>
+</ul>
+</section>
+<section id="take-a-break" class="level3">
+<h3 class="anchored" data-anchor-id="take-a-break">Take a break</h3>
+<ul>
+<li><p>패닉 존에 있다면, 멈추고 !! (하루정도) 다시 얘기해 ..</p>
+<h3 id="summary" class="anchored">Summary</h3>
+<p><img src="images/image-1537011643.png" class="img-fluid" width="471"></p></li>
+</ul>
+</section>
+</section>
 
 </main>
 <!-- /main column -->
